# evalessence

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  justfile  pyproject.toml
clients/python/: api.py  pyproject.toml
clients/python/src/evalessence/: __init__.py  api.py
crates/evalessence-api/: Cargo.toml
crates/evalessence-api/src/: app.rs  dataset.rs  lib.rs
crates/evalessence-core/: Cargo.toml
crates/evalessence-core/src/: app_core.rs  dataset_core.rs  datatset_core.rs  file_utils.rs  lib.rs
crates/evalessence-core/tests/: app_core_tests.rs
docs/: architecture.md  first_version_specs.md
example/: example.py
src/evalessence/: evaluation_pipeline.py  interfaces.py  rest_api.py
