[project]
name = "evalessence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nicolas Lecrique", email = "6695280+nicolaslecrique@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.127.0",
    "pandas>=2.3.3",
    "pydantic>=2.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
