[project]
name = "evalessence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nicolas Lecrique", email = "6695280+nicolaslecrique@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
