[package]
name = "evalessence-api"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {workspace = true, features = ["derive"]}
async-trait = {workspace = true}
thiserror = { workspace = true }
anyhow = { workspace = true}
arrow = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true