[package]
name = "evalessence-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = {workspace = true}
futures = { workspace = true }
reqwest = { workspace = true }
evalessence-api = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
serde-saphyr = "0.0.17"

[dev-dependencies]

[lints]
workspace = true