[package]
name = "evalessence-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = {workspace = true}
futures = { workspace = true }
reqwest = { workspace = true }
evalessence-api = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
tokio-stream = { workspace = true }
serde-saphyr= {workspace = true}
serde = { workspace = true, features = ["derive"] }
blake3 = {workspace = true}
nanoid = {workspace = true}
slug = {workspace = true}

[dev-dependencies]

[lints]
workspace = true